Fixes on webserver: - Tmp  solution for production target based on production-build stage -  Normalized naming of package and console script

--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -18,6 +18,8 @@ services:
   webserver:
     image: services_webserver:dev
     build:
+      args:
+        - HOST_GID_ARG=${HOST_GID:?Undefined host gid}
       target: development
     volumes:
       - ./web/server:/home/scu/services/web/server
