--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -9,12 +9,8 @@ LABEL maintainer=pcrespov
 #  REQUIRED: context expected at $(this-file-dir)/../../
 #  REQUIRED: client_qx:build image ready
 
-ARG DOCKER_GID_ARG=1001
-
-# create user 'scu' and adds it to host's docker group
-RUN adduser -D -u 8004 scu &&\
-    addgroup -g $DOCKER_GID_ARG docker &&\
-    addgroup scu docker
+# create user 'scu'
+RUN adduser -D -u 8004 scu
 
 ENV HOME /home/scu
 ENV PIP  /home/scu/.venv/bin/pip3
@@ -34,10 +30,6 @@ EXPOSE 8080
 #       + src
 #       + tests
 #
-#
-#
-# TODO: try installing in .venv in $HOME would allow installing as non-root all 3rd, 2nd
-#       and even the application itself
 #
 # TODO: straight copying python packages bring unnecessary files (e.g. __pycache__) -> dockerignore!
 #       could copy and then python setup.py install OR git clone into the container.
@@ -59,24 +51,30 @@ RUN python3 -m venv $HOME/.venv &&\
 
 WORKDIR /home/scu
 
-# 1. install base 3rd party packages
-COPY --chown=scu:scu services/web/server/requirements requirements
-RUN $PIP install --no-cache-dir -r requirements/base.txt &&\
-    rm -rf requirements
+# install base 3rd party packages to accelerate runtime installs
+COPY --chown=scu:scu services/web/server/requirements/base.txt requirements-base.txt
+RUN $PIP install --no-cache-dir -r requirements-base.txt &&\
+    rm requirements-base.txt
+
 
 # --------------------------Development stage -------------------
 FROM build as development
 
 ARG HOST_GID_ARG=1000
 
-# in dev-mode we give access to `scu` to host's mapped volumes
+# install test 3rd party packages to accelerate runtime installs
+COPY --chown=scu:scu services/web/server/requirements/tests.txt requirements-tests.txt
+RUN $PIP install --no-cache-dir -r requirements-tests.txt &&\
+    rm requirements-tests.txt
+
+# in dev mode we give access to `scu` to host's mapped volumes
 RUN addgroup -g $HOST_GID_ARG hgrp &&\
     addgroup scu hgrp && \
     chown -R scu:scu $HOME/.venv
 
 VOLUME /home/scu/packages
 VOLUME /home/scu/services/web/server/
-VOLUME /home/scu/services/webclient/
+VOLUME /home/scu/services/web/client/
 
 USER scu
 ENV SIMCORE_WEB_CONFIG development
@@ -90,11 +88,11 @@ FROM build as build-production
 
 ENV SIMCORE_WEB_CONFIG production
 
-# 2. 2nd party packages
+# 2nd party packages
 COPY --chown=scu:scu packages $HOME/packages
-# 3. client
-COPY --from=services_webclient:build --chown=scu:scu /home/scu/client/build-output $HOME/services/client
-# 4. server
+# client
+COPY --from=services_webclient:build --chown=scu:scu /home/scu/client/build-output $HOME/services/web/client
+# server
 COPY --chown=scu:scu services/web/server $HOME/services/web/server
 
 WORKDIR /home/scu/services/web/server
@@ -102,14 +100,20 @@ RUN $PIP --no-cache-dir install -r requirements/prod.txt ;\
     $PIP list
 
 #-------------------
-FROM base as production
+#FROM base as production
+# TODO: PC some basic package missing
 
-# TODO: PC->MaG some postgresql missing? install non-dev package!?
+#COPY --from=build-production --chown=scu:scu $HOME/services/web/server/boot.sh $HOME
+#COPY --from=build-production --chown=scu:scu $HOME/.venv $HOME/.venv
+#RUN . $HOME/.venv/bin/activate; pip list
 
-COPY --from=build-production --chown=scu:scu $HOME/services/web/server/boot.sh $HOME
-COPY --from=build-production --chown=scu:scu $HOME/.venv $HOME/.venv
+# FIXME: temporary solution until found missing packages
+FROM build-production as production
 
-RUN . $HOME/.venv/bin/activate; pip list
+RUN chown -R scu:scu $HOME/.venv &&\
+    cp $HOME/services/web/server/boot.sh $HOME &&\
+    rm -rf $HOME/packages &&\
+    rm -rf $HOME/services/web/server
 
 WORKDIR /home/scu
 USER scu
