--- a/services/web/server/src/server/.config/server-docker-prod.yaml
+++ b/services/web/server/src/server/.config/server-docker-prod.yaml
@@ -15,8 +15,8 @@ postgres:
   endpoint: ${POSTGRES_ENDPOINT}
   user: ${POSTGRES_USER}
   password: ${POSTGRES_PASSWORD}
-  host: null
-  port: null
+  host: postgres
+  port: 5432
 rabbit:
   user: ${RABBITMQ_USER}
   password: ${RABBITMQ_PASSWORD}
@@ -28,10 +28,4 @@ s3:
   access_key: ${S3_ACCESS_KEY}
   secret_key: ${S3_SECRET_KEY}
   bucket_name: ${S3_BUCKET_NAME}
-cs_s4l:
-  host: ${CS_S4L_HOSTNAME}
-  app:
-    port: ${CS_S4L_PORT_APP}
-  modeler:
-    port: ${CS_S4L_PORT_MOD}
 ...
