added envelope to responses changed code to status in error

--- a/services/director/src/simcore_service_director/.openapi/v1/director_api.yaml
+++ b/services/director/src/simcore_service_director/.openapi/v1/director_api.yaml
@@ -271,10 +271,10 @@ components:
     Error:
       type: object
       required:
-        - code
+        - status
         - message
       properties:
-        code:
+        status:
           description: Error code
           type: integer
           example: 404
