Fixed volume map between sidecar and workcar containers

--- a/services/docker-compose.tools.yml
+++ b/services/docker-compose.tools.yml
@@ -17,3 +17,5 @@ services:
     depends_on:
       - postgres
   #--------------------------------------------------------------------
+  # tool wishlist:
+  #  - something to monitor containers when docker-compose up. e.g. portainer?
