WIP: server connects to rest api and response to health check

--- a/services/web/server/src/simcore_service_webserver/.openapi/v1/test_1.0.0-oas3.yaml
+++ b/services/web/server/src/simcore_service_webserver/.openapi/v1/test_1.0.0-oas3.yaml
@@ -5,7 +5,7 @@ info:
   title: simcore-service-webserver API
   contact:
     name: IT'IS Foundation
-    email: support at simcore.io
+    email: support@simcore.io
   license:
     name: MIT
     url: https://github.com/ITISFoundation/osparc-simcore/blob/master/LICENSE
