--- a/packages/director-sdk/codegen_config.json
+++ b/packages/director-sdk/codegen_config.json
@@ -2,6 +2,6 @@
     "packageName":"simcore_director_sdk",
     "projectName":"simcore-director-sdk",
     "packageVersion":"1.0.0",
-    "packageUrl":"www.google.com",
+    "packageUrl":"https://github.com/ITISFoundation/osparc-simcore/tree/master/packages/director-sdk/python",
     "library":"asyncio"
 }
