--- a/services/docker-compose.tools.yml
+++ b/services/docker-compose.tools.yml
@@ -2,6 +2,7 @@ version: '3.4'
 services:
   # Maintenance services
   #--------------------------------------------------------------------
+  # celery workers monitor
   flower:
     image: ondrejit/flower:latest
     command: --broker=amqp://${RABBITMQ_USER}:${RABBITMQ_PASSWORD}@rabbit:5672
@@ -10,6 +11,7 @@ services:
     depends_on:
       - rabbit
   #--------------------------------------------------------------------
+  # monitors databases
   adminer:
     image: adminer
     ports:
@@ -17,5 +19,14 @@ services:
     depends_on:
       - postgres
   #--------------------------------------------------------------------
-  # tool wishlist:
-  #  - something to monitor containers when docker-compose up. e.g. portainer?
+  portainer:
+    image: portainer/portainer
+    ports:
+      - "9002:9000"
+    command: -H unix:///var/run/docker.sock
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+
+volumes:
+  portainer_data:
