refactored director Dockerfile to be in sync with current osparc best practices - start director as scu user in entrypoint - build stage, dev stage, prod stage in dockerfile - boot and entrypoint now in .docker folder - requirement files to speed up deployment

--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -6,7 +6,7 @@ services:
     build:
       target: development
     volumes:
-      - './director:/home/scu/src'
+      - './director:/home/scu/services/director'
   #--------------------------------------------------------------------
   webclient:
     image: services_webclient:dev
