--- a/services/director/Dockerfile
+++ b/services/director/Dockerfile
@@ -1,62 +1,82 @@
-FROM python:3.6-alpine as common
+FROM python:3.6-alpine as base
 
-LABEL maintainer="sanderegg"
+LABEL maintainer=sanderegg
 
-RUN apk add --no-cache gcc libc-dev
-# create standard user scu
-RUN adduser -D -u 8004 scu
-USER scu
+ARG DOCKER_GID_ARG=1001
 
-# RUN addgroup docker && addgroup user \
-#   && adduser -D app \
-  # && addgroup app app && addgroup app docker
+RUN apk add --no-cache \
+    su-exec
 
+# create user `scu` and `docker` group (with same id as in host)
+RUN adduser -D -u 8004 scu &&\
+    addgroup -g $DOCKER_GID_ARG docker
+
+ENV HOME /home/scu
+ENV PIP  /home/scu/.venv/bin/pip3
+
+EXPOSE 8001
 ENV REGISTRY_AUTH = ''
 ENV REGISTRY_USER = ''
 ENV REGISTRY_PW = ''
 ENV REGISTRY_URL = ''
 
-EXPOSE 8001
-
 WORKDIR /home/scu
 
-# + /home/scu/            $HOME, $WORKDIR,
-#    + src/            $PYTHONPATH
-#    + boot.sh
+# -------------------------- Build stage -------------------
+#
+# - Preserves relative folder structure
+#
+# + /home/scu/              $HOME
+#    + services/director
+#        ...
+#    + packages
+#        ...
+FROM base as build
 
-
+RUN apk add --no-cache \
+    gcc \
+    libc-dev
 
 # create virtual environment
-RUN python -m venv venv \
-    && chown -R scu:scu venv \
-    && /home/scu/venv/bin/pip install --upgrade pip wheel setuptools
+RUN python3 -m venv $HOME/.venv &&\
+    $PIP install --no-cache-dir --upgrade \
+      pip \
+      wheel \
+      setuptools
 
-# copy boot
-COPY --chown=scu:scu boot.sh boot.sh
-RUN chmod +x boot.sh
+# this is done to accelerate installation of director later on
+COPY --chown=scu:scu services/director/requirements/base.txt requirements-base.txt
+RUN $PIP install --no-cache-dir -r requirements-base.txt &&\
+    rm requirements-base.txt
 
-# VOLUME /var/run/docker.sock # FIXME: fails when docker-compose run in production !?
+COPY --chown=scu:scu services/director/.docker .docker
 
 # --------------------------Development stage -------------------
-FROM common as development
+FROM build as development
+
+ARG HOST_GID_ARG=1000
+
+# in dev-mode we give access to `scu` to host's mapped volumes
+# FIXME: files created by scu cannot be deleted by host! we need to do the same group in host?
+RUN addgroup -g $HOST_GID_ARG hgrp &&\
+    addgroup scu hgrp && \
+    chown -R scu:scu $HOME/.venv
+
+VOLUME /home/scu/services/director
 
 ENV DEBUG 1
-# mount the director folder here
-VOLUME /home/scu/src
-
-USER root
-
-CMD ["/bin/sh", "./boot.sh"]
+ENV RUN_DOCKER_ENGINE_ROOT=0
+ENTRYPOINT [ "/bin/sh", ".docker/entrypoint.sh" ]
+CMD ["/bin/sh", ".docker/boot.sh"]
 
 # --------------------------Production stage -------------------
-FROM common as production
+FROM build as production
 
 ENV DEBUG 0
-COPY --chown=scu:scu . /home/scu/src
-RUN /home/scu/venv/bin/pip install /home/scu/src \
-    && rm -rf /home/scu/src
+ENV RUN_DOCKER_ENGINE_ROOT=0
+COPY --chown=scu:scu services/director $HOME/services/director
+RUN $PIP --no-cache-dir install $HOME/services/director \
+    && rm -rf $HOME/services/director
 
-# FIXME: this is the only way to get access to docker sockets !?
-USER root
-
-ENTRYPOINT ["/bin/sh", "./boot.sh"]
+ENTRYPOINT [ "/bin/sh", ".docker/entrypoint.sh" ]
+CMD ["/bin/sh", ".docker/boot.sh"]
