--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ matrix:
         - pip3 install packages/s3wrapper[test]
         - pip3 install packages/simcore-sdk[test]
         - pip3 install services/director[test]
+        - pip3 install packages/director-sdk/python
         - pushd services/web/server; pip3 install -r requirements/ci.txt; popd
 
       before_script:
