--- a/services/director/src/simcore_service_director/.oas3/v1/schemas/running_service.yaml
+++ b/services/director/src/simcore_service_director/.oas3/v1/schemas/running_service.yaml
@@ -12,6 +12,7 @@ components:
       type: object
       required:
         - published_port
+        - service_uuid
       properties:
         published_port:
           description: The ports where the service provides its interface
@@ -23,3 +24,8 @@ components:
           description: The entry point where the service provides its interface if specified
           type: string
           example: /the/entry/point/is/here
+        service_uuid:
+          description: The UUID attached to this service
+          type: string
+          format: UUID
+          example: 123e4567-e89b-12d3-a456-426655440000
