--- a/services/dy-2Dgraph/use-cases/Makefile
+++ b/services/dy-2Dgraph/use-cases/Makefile
@@ -30,7 +30,7 @@ build:
 	${DOCKER_COMPOSE} -f docker-compose.yml build
 
 rebuild:
-	${DOCKER_COMPOSE} -f docker-compose.yml build
+	${DOCKER_COMPOSE} -f docker-compose.yml build --no-cache
 
 up:
 	${DOCKER_COMPOSE} -f docker-compose.yml up
